--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "moment": "^2.27.0"
+    },
+    "devDependencies": {
+        "@vuepress/plugin-pwa": "^1.5.2"
     }
 }
