--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "moment": "^2.27.0"
     },
     "devDependencies": {
-        "@vuepress/plugin-pwa": "^1.5.2"
+        "@vuepress/plugin-pwa": "^1.5.2",
+        "vuepress": "^1.5.2"
     }
 }
