--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@vssue/api-github-v3": "^1.4.4",
+        "@vssue/api-github-v4": "^1.4.0",
+        "@vssue/vuepress-plugin-vssue": "^1.4.6",
         "moment": "^2.27.0"
     },
     "devDependencies": {
