--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@vssue/api-github-v3": "^1.4.4",
         "@vssue/api-github-v4": "^1.4.0",
         "@vssue/vuepress-plugin-vssue": "^1.4.6",
+        "countup.js": "^2.0.5",
         "moment": "^2.27.0"
     },
     "devDependencies": {
