--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "@vuepress/plugin-back-to-top": "^1.5.2",
+        "@vuepress/plugin-medium-zoom": "^1.5.2",
         "@vuepress/plugin-pwa": "^1.5.2",
         "vuepress": "^1.5.2"
     }
